@@ -35,12 +35,13 @@ using namespace TagLib;
 class RIFF::WAV::Properties::PropertiesPrivate
 {
 public:
-  PropertiesPrivate() :
+  PropertiesPrivate(uint streamLength = 0) :
     format(0),
     length(0),
     bitrate(0),
     sampleRate(0),
-    channels(0)
+    channels(0),
+	streamLength(streamLength)
   {
 
   }
@@ -50,6 +51,7 @@ public:
   int bitrate;
   int sampleRate;
   int channels;
+  uint streamLength;
 };
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -58,7 +60,13 @@ public:
 
 RIFF::WAV::Properties::Properties(const ByteVector &data, ReadStyle style) : AudioProperties(style)
 {
-  d = new PropertiesPrivate;
+  d = new PropertiesPrivate();
+  read(data);
+}
+
+RIFF::WAV::Properties::Properties(const ByteVector &data, uint streamLength, ReadStyle style) : AudioProperties(style)
+{
+  d = new PropertiesPrivate(streamLength);
   read(data);
 }
 
@@ -93,12 +101,12 @@ int RIFF::WAV::Properties::channels() const
 
 void RIFF::WAV::Properties::read(const ByteVector &data)
 {
-  d->format     = data.mid(0, 2).toShort(false);
-  d->channels   = data.mid(2, 2).toShort(false);
+  d->format = data.mid(0, 2).toShort(false);
+  d->channels = data.mid(2, 2).toShort(false);
   d->sampleRate = data.mid(4, 4).toUInt(false);
-  d->bitrate    = data.mid(8, 4).toUInt(false) * 8 / 1024;
 
-  // short bitsPerSample = data.mid(10, 2).toShort();
-  // d->bitrate    = (sampleRate * sampleSize * d->channels) / 1024.0;
-  // d->length     = sampleFrames / d->sampleRate;
+  uint byteRate = data.mid(8, 4).toUInt(false);
+  d->bitrate = byteRate * 8 / 1024;
+
+  d->length = byteRate > 0 ? d->streamLength / byteRate : 0;
 }
